make created_at

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -22,6 +22,8 @@
     <%= f.label :done %>
     <%= f.check_box :done, {}, checked_value = "true",unchecked_value = "false" %>
 
+    <%= f.datetime_select(:created_time, default: Time.now) %>
+
     <%= f.submit %>
   <% end %>
 <% end %>
