--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,6 +3,8 @@
 <ul>
   <% @tasks.each do |task| %>
     <li>(<%= task.priority %>)<%= task.name %> - <%= task.done == true ? "Done" : "Yet" %>
+    <br>
+    create_at: <%= task.created_at.getlocal.strftime("%Y/%m/%e - %H:%M%p") %>
     </p></li>
     <p><%= link_to "in details", task_path(task) %></p>
     <p>
